--- a/projects/movie-webpage.html
+++ b/projects/movie-webpage.html
@@ -44,17 +44,23 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Example Project</h1>
-            <p>Text about the project</p>
-            <p>More text about the project.</p>
-            <a href="#">Link about the project</a><br>
+            <h1 class="margin text-center">Movie webpaje project</h1>
+            <p>My goal in this project was to use all of my knolge of CSS, HTML and all of my knolge in coding to create a movie webpage called "not peppermint" through Replit, me and my partener Kostela.</p>
+            
+            <p>While me any my partner were trying to find an idea about the tobic of the movie, our teacher showed us the example of his movie webpage which was called peppermint which means"cool" 
+                , so me and my partner had an idea of creating a movie webpage that has the name not peppermint which means "not cool", Which is talking about students who aren't following the techer's dirctions are being called"not peppermint". Me and my partner worked on different things so we can get the work done faster.   </p>
+            <p> During this project I faced a lot of chalenges me and my partner in coding and those chalenges gave us takeaways. One of the chalenges and takeaways me and my partner faced was changing the positon of the input, because the input has a lot of names we didn't know which one should we put in the CSS to change the position of the input, so we asked the teacher and the teacher told use that we have to allways choose the first name in the HTML and edit it in the CSS so the takeaway here was to ask the teacher when you and your partner get stuck.
+            Another chalenge and takeaway me and my partner faced was adding a sumbit button to our webpage this was hard for us because both of us forgot how to do it since we learned new things so me and my partner opend up our sep notes and then we found out how to make one thier, so the takeaway here was to go back to your notes when you need help.</p>
+            <a href="https://non-peppermint.omarm266.repl.co/">preview to my movie webpage</a><br>
+            <a href="https://replit.com/@omarm266/non-peppermint">link to the code of the movie webpage</a><br>
+
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
             <!--EXAMPLE OF GITHUB LINK-->
             <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a><br>-->
 
-            <img src="../img/avatar.png" class="img-fluid project-img">
+            <img src="../img/notpeppermint.png" class="img-fluid project-img">
 
 
             <div class="row">
