--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <h5 class="card-title">Movie webpage</h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
                             <p class="card-text">This is my movie webpage project </p>
-                            <a href="movie-webpage.html" class="card-link">link to my Project protfolio</a>
+                            <a href="projects/movie-webpage.html" class="card-link">link to my movie webpage project.</a>
                         </div>
                     </div>
                 </div>
