--- a/projects/cyoa.html
+++ b/projects/cyoa.html
@@ -1,1 +1,98 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title class="owner-name">#</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../style.css" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+</head>
+
+<body>
+
+    <!-- Navbar -->
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand owner-name" href="#"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" id="github" target="_blank">Github</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html#projects">Projects</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- First Container -->
+    <div class="container-fluid bg-1">
+        <div class="container">
+
+            <h1 class="margin text-center">CYOA project</h1>
+            <p>In the project, me and katee made a scenario about what would you do if you got a bad grade on your report card and your mom calles you to check it. In the scenario you had the choice to lie to your mom or say the truth then there are different outcome for each of these choices like how your mom punish or your mom offers you some help. </p>
+            <h2> Context:</h2>
+            <p>I think one of the main reasons why my teacher assigned this project is to grow up the skill of comunications. In this project me and my partner mostly used comunication,so it is the skill the we grew the most, because we were doing the project on our IDE so we had to merge together in our IDE , so we had to push and pull and that would be impossipole to happen if we didn't comunicate with eachother. </p>
+            <h2>Challenges: </h2>
+            <p>Since we were working on the project half in the 1st semester and the other half in the 2nd semester me and my partner had different Sep periods so it was very hard on me to communicate with my parter to finish up the project. So what I did is that I used Slak to comunicate with my partner to finish up the project. </p>
+            <h2>Next Steps: </h2>
+            <p>If I had more time in this project I would've done some extra created so I can garentee a 100 in This project.</p>
+            <a href="https://github.com/kateek5417/CYOA?tab=readme-ov-file">Link to the project</a><br>
+            <a href="#">Link about the project</a><br>
+
+            <!--EXAMPLE OF PREVIEW LINK-->
+            <!--<a href="http://omarm4400.github.io/omarm4400">Preview</a><br>-->
+            <!--EXAMPLE OF GITHUB LINK-->
+            <!--<a href="http://github.com/omarm4400/omarm4400">Github</a><br>-->
+
+            <img src="../Screenshot 2024-02-08 4.13.57 PM.png" class="img-fluid project-img">
+
+
+            <div class="row">
+
+                <!--
+                <div class="col-sm-6">
+                    Use this to...
+                </div>
+                <div class="col-sm-6">
+                    ...make two columns
+                </div>
+                -->
+
+            </div>
+
+        </div>
+    </div>
+
+
+
+    <!-- Footer -->
+    <footer class="container-fluid bg-4 text-center">
+        <a href="#" target="_blank" id="fork"><img src="../img/fork.png"></a><br>
+        <a href="https://hstatsep.github.io" target="_blank"><img src="https://hstatsep.github.io/img/hstatsep-logo-small.png" id="sep"></a>
+    </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-core.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/normalize-whitespace/prism-normalize-whitespace.min.js"></script>
+    <script src="../script.js"></script>
+</body>
+
+</html>
 
