--- a/projects/cyoa.html
+++ b/projects/cyoa.html
@@ -60,7 +60,7 @@
             <!--EXAMPLE OF GITHUB LINK-->
             <!--<a href="http://github.com/omarm4400/omarm4400">Github</a><br>-->
 
-            <img src="../Screenshot 2024-02-08 4.13.57 PM.png" class="img-fluid project-img">
+            <img src="../img/Screenshot 2024-02-08 4.13.57 PM.png" class="img-fluid project-img">
 
 
             <div class="row">
