--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <h5 class="card-title">Project Name</h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
                             <p class="card-text">This is my Cyoa project.</p>
-                            <a href="projects/cyoa.html" class="card-link">More</a>
+                            <a href="projects/cyoa.html" class="card-link">Link to my cyoa project</a>
                         </div>
                     </div>
                 </div>
