fix errors again

--- a/projects/cyoa.html
+++ b/projects/cyoa.html
@@ -53,11 +53,13 @@
             <h2>Next Steps: </h2>
             <p>If I had more time in this project I would've done some extra created so I can garentee a 100 in This project.</p>
             <a href="https://github.com/kateek5417/CYOA?tab=readme-ov-file">Link to the project</a><br>
-            <a href="#">Link about the project</a><br>
+            
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://omarm4400.github.io/omarm4400">Preview</a><br>-->
             <!--EXAMPLE OF GITHUB LINK-->
+            <!--<a href="http://github.com/omarm4400/omarm4400">Github</a><br>-->
+
             <img src="../img/Screenshot 2024-02-08 4.13.57 PM.png" class="img-fluid project-img">
 
 
