--- a/projects/sep10-fp.html
+++ b/projects/sep10-fp.html
@@ -44,29 +44,22 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Example Project</h1>
-            <p>Text about the project</p>
-            <p>More text about the project.</p>
-            <a href="#">Link about the project</a><br>
+            <h1 class="margin text-center">freedom Project</h1>
+            <p>I am a student at HSTAT in the Software Engineering Program. The "Freedom Project" for SEP10 is a year-long project all about making a website that informs the viewer of the current and future innovations in the topic of my choosing.
+                For my project, I chose the topic of sports.I used HTML, CSS, Bootstrap, and Github. I also chose to independently study Afram in order to help me make by website.
+            </p>
+            <p>Since this project is a year-long project it had a lot of challenges and takaways. My first challenge and takeaway was remembering all the cods I learned in the beginning of the year, so I had to use my notes so I can remember all the old cods.
+                ANother challenge and takeaway was learning my tool (Afram) to help me with my project, since my tool was a thing I had to learn on my own it was so hard for me, because there wasn't a lot of people to ask for help, because everyone chose different tool to learn. so I had to watch youtube videos and learn on my own. The last challenge and takeaway was customizing time to work on the project. since we had only one day in a week to work on our project, I had to customize some extra time to work on it because I had other things to do at school too. These were my challenges and takeways for my freedom project. Down here is the future invention of my project that I came up with and also used my tool (Afam) for it.
+            </p>
 
-            <!--EXAMPLE OF PREVIEW LINK-->
-            <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a><br>-->
-            <!--EXAMPLE OF GITHUB LINK-->
-            <!--<a href="http://github.com/yourUserName/yourRepoName">Github</a><br>-->
+            <img src="var1.png" class="img-fluid project-img">
 
-            <img src="../img/avatar.png" class="img-fluid project-img">
+            <a href="https://omarm4400.github.io/sep10-freedom-project/startbootstrap-scrolling-nav-gh-pages/">Link to my project preview</a><br>
 
 
             <div class="row">
 
-                <!--
-                <div class="col-sm-6">
-                    Use this to...
-                </div>
-                <div class="col-sm-6">
-                    ...make two columns
-                </div>
-                -->
+
 
             </div>
 
@@ -76,7 +69,7 @@
 
 
     <!-- Footer -->
-    <footer class="container-fluid bg-4 text-center">
+    <!-- <footer class="container-fluid bg-4 text-center">
         <a href="#" target="_blank" id="fork"><img src="../img/fork.png"></a><br>
         <a href="https://hstatsep.github.io" target="_blank"><img src="https://hstatsep.github.io/img/hstatsep-logo-small.png" id="sep"></a>
     </footer>
@@ -84,7 +77,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/normalize-whitespace/prism-normalize-whitespace.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/normalize-whitespace/prism-normalize-whitespace.min.js"></script> -->
     <script src="../script.js"></script>
 </body>
 
