--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <h5 class="card-title"> Freedom Project</h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
                             <p class="card-text">This is my year-long project where I wrote about a topic of my own.</p>
-                            <a href="project/sep10-fp.html" class="card-link">More</a>
+                            <a href="projects/sep10-fp.html" class="card-link">More</a>
                         </div>
                     </div>
                 </div>
