--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Project Name</h5>
+                            <h5 class="card-title">Cyoa project</h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
                             <p class="card-text">This is my Cyoa project.</p>
                             <a href="projects/cyoa.html" class="card-link">Link to my cyoa project</a>
@@ -96,6 +96,16 @@
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade</h6>
                             <p class="card-text">This is my year-long project where I wrote about a topic of my own.</p>
                             <a href="projects/sep10-fp.html" class="card-link">More</a>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">sep11 freedom project</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">11th Grade</h6>
+                            <p class="card-text">This is my sep11 freedome project, where I created a compentaion betweena anime and shooting games.</p>
+                            <a href="mygame.html" class="card-link">More</a>
                         </div>
                     </div>
                 </div>
