all done misakes fixedd

--- a/projects/sep11fp.html
+++ b/projects/sep11fp.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>#</title>
+    <title>SEP11 Freedom Project</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.css" rel="stylesheet">
@@ -39,13 +39,14 @@
             <h1 class="margin text-center">SEP11 Freedom Project</h1>
             <p>My goal in this project was to apply my knowledge of JavaScript and Kaboom to create a shooting game.</p>
 
-            <p>At first, I didn't know what to do because I wanted my shooting game to be unique. Then, I realized that I watch a lot of anime, so I thought to myself, "Why not combine anime with my shooting game?" That’s when I decided to make the character in my game an anime character. And that’s how I came up with the idea for my game.</p>
+            <p>At first, I wasn’t sure what direction to take because I wanted my game to be unique. Then, I realized that I watch a lot of anime, so I thought, “Why not combine anime with my shooting game?” That’s how I decided to make my main character an anime-inspired figure.</p>
 
-            <p>I faced many challenges during the process of creating my game because it was a year-long project. My first challenge came when my project partner left SEP in the middle of the year, forcing me to learn a new tool and create a game in a short amount of time. Another challenge was choosing the right version of Kaboom. Whenever I added a version of Kaboom, it wouldn’t work, so I had to research how to get the latest version of Kaboom on my IDE. My last challenge was time management—I had to learn my tool while also completing an MVP at the same time, which was really difficult. I had to work hard to achieve both.</p>
+            <p>I faced several challenges throughout this year-long project. The first challenge occurred when my project partner left SEP in the middle of the year, requiring me to learn a new tool and create a game under time constraints. Another challenge was selecting the correct version of Kaboom. Whenever I added a version, it wouldn't work, so I had to research how to get the latest version on my IDE. Lastly, time management was a major hurdle—I had to learn my tool while also completing my MVP, which was difficult. I had to push myself to accomplish both.</p>
 
-            <p>Because I encountered many challenges, I also gained valuable takeaways. My first takeaway was learning to ask for help. Since I changed my tool in the middle of the year, I needed guidance, so I reached out to friends who were already familiar with Kaboom and asked them for assistance. That helped me learn the tool faster. My second takeaway was the importance of exploring. Since I didn’t know where to start, I watched YouTube videos to help me learn my tool more efficiently, which gave me a head start with Kaboom. My last takeaway was time management. I needed to balance learning my tool with finishing my Freedom Project, so I organized my tasks by writing down what I needed to do and when I needed to do it. That helped me stay on track and avoid mistakes. I believe these takeaways are useful not only for projects but for any aspect of life.</p>
-            <a href="https://omarm4400.github.io/sep11-freedom-project/mygame.html">Preview my project webpage</a><br>
-            <a href="https://github.com/omarm4400/sep11-freedom-project/blob/main/mygame.html">Project repository</a><br>
+            <p>Despite these challenges, I gained valuable takeaways. First, I learned the importance of asking for help. Since I changed my tool mid-year, I sought guidance from friends who were familiar with Kaboom, which helped me grasp the tool faster. Second, I realized the value of exploring. Because I didn’t know where to start, I watched YouTube tutorials, which gave me a helpful head start with Kaboom. Lastly, time management proved crucial. Balancing learning my tool and finishing my project required organization, so I listed my tasks on paper to keep track of deadlines. These lessons are useful not only in projects but in everyday life.</p>
+
+            <a href="https://omarm4400.github.io/sep11-freedom-project/index.html">Preview my project webpage</a><br>
+            <a href="https://github.com/omarm4400/sep11-freedom-project/blob/main/index.html">Project repository</a><br>
 
             <img src="./img/mygame.png" class="img-fluid project-img">
         </div>
