--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <h5 class="card-title">sep11 freedom project</h5>
                             <h6 class="card-subtitle mb-2 text-muted">11th Grade</h6>
                             <p class="card-text">This is my sep11 freedome project, where I created a compentaion betweena anime and shooting games.</p>
-                            <a href="project/sep11fp.html" class="card-link">More</a>
+                            <a href="projects/sep11fp.html" class="card-link">More</a>
                         </div>
                     </div>
                 </div>
