--- a/projects/sep11fp.html
+++ b/projects/sep11fp.html
@@ -45,10 +45,10 @@
 
             <p>Despite these challenges, I gained valuable takeaways. First, I learned the importance of asking for help. Since I changed my tool mid-year, I sought guidance from friends who were familiar with Kaboom, which helped me grasp the tool faster. Second, I realized the value of exploring. Because I didn’t know where to start, I watched YouTube tutorials, which gave me a helpful head start with Kaboom. Lastly, time management proved crucial. Balancing learning my tool and finishing my project required organization, so I listed my tasks on paper to keep track of deadlines. These lessons are useful not only in projects but in everyday life.</p>
 
-            <a href="https://omarm4400.github.io/sep11-freedom-project/index.html">Preview my project webpage</a><br>
+            <a href="https://omarm4400.github.io/sep11-freedom-project/mygame.html">Preview my project webpage</a><br>
             <a href="https://github.com/omarm4400/sep11-freedom-project/blob/main/index.html">Project repository</a><br>
 
-            <img src="./img/mygame.png" class="img-fluid project-img">
+            <img src="../img/mygame.png" class="img-fluid project-img">
         </div>
     </div>
 
